<resources>
    <string name="app_name">LoginRegister</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">FullName</string>
    <string name="email">Email</string>
    <string name="login_here">Already have an account? <u>Login</u></string>
    <string name="sign_up_here">Create a new account? SignUp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="logout">Logout</string>
    <string name="select_date">Select birthdate</string>
    <string name="birthday">Birthday</string>
    <string name="latestPost">Latest post</string>
    <string name="postDate">Date:</string>
    <string name="postLocation">Where it was taken:</string>
    <string name="latestPostLocation">Post location...</string>

    <string name="profileNav">Profile</string>
    <string name="activityStreamNav">Activity stream</string>
    <string name="makePostNav">Make a post</string>
    <string name="sendMessageNav">Send a message</string>
    <string name="settingNav">Settings</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="title_activity_stream">ActivityStream</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">UserName</string>
    <string name="time_of_post">0 hrs ago</string>
    <string name="brief_post_description">Post descriptions</string>
    <string name="post_like_count">0</string>
    <string name="comments_count">0</string>

    <string name="friends_list">Friends list</string>
    <string name="pending_invitations">Pending invitations</string>
    <string name="invite_friends">Friends list</string>

</resources>