<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/userProfileImageView"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/profile_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/user_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userProfileImageView"
        app:layout_constraintTop_toTopOf="@+id/userProfileImageView" />

    <TextView
        android:id="@+id/userPostDateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/time_of_post"
        app:layout_constraintEnd_toEndOf="@+id/usernameTextView"
        app:layout_constraintStart_toStartOf="@+id/usernameTextView"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView" />

    <TextView
        android:id="@+id/briefDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/brief_post_description"
        app:layout_constraintEnd_toEndOf="@+id/userPostDateTextView"
        app:layout_constraintStart_toStartOf="@+id/userPostDateTextView"
        app:layout_constraintTop_toBottomOf="@+id/userPostDateTextView" />

    <ImageView
        android:id="@+id/postImageView"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/briefDescriptionTextView"
        app:srcCompat="@drawable/nature01" />

    <ImageView
        android:id="@+id/thumbsUpImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postImageView"
        app:srcCompat="@drawable/thumbs_up" />

    <ImageView
        android:id="@+id/thumbsDownImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/thumbsUpImageView"
        app:layout_constraintTop_toBottomOf="@+id/postImageView"
        app:srcCompat="@drawable/thumbs_down" />

    <ImageView
        android:id="@+id/commentsImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postImageView"
        app:srcCompat="@drawable/comments" />

    <TextView
        android:id="@+id/postLikeCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/post_like_count"
        app:layout_constraintBottom_toBottomOf="@+id/thumbsDownImageView"
        app:layout_constraintStart_toEndOf="@+id/thumbsDownImageView"
        app:layout_constraintTop_toTopOf="@+id/thumbsDownImageView" />

    <TextView
        android:id="@+id/commentsCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/comments_count"
        app:layout_constraintBottom_toBottomOf="@+id/commentsImageView"
        app:layout_constraintEnd_toStartOf="@+id/commentsImageView"
        app:layout_constraintTop_toTopOf="@+id/commentsImageView" />
</androidx.constraintlayout.widget.ConstraintLayout>