<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentScrollView"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="false"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        tools:context=".UserProfile">

        <ImageButton
            android:id="@+id/profileImageButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="User profile"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/searchImageButton3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile_icon" />

        <ImageButton
            android:id="@+id/searchImageButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:contentDescription="Search"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/newPostImageButton3"
            app:layout_constraintStart_toEndOf="@+id/profileImageButton3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/search" />

        <ImageButton
            android:id="@+id/newPostImageButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:contentDescription="Make a new post"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/UserImageBackgroundImageView"
            app:layout_constraintEnd_toStartOf="@+id/messageImageButton3"
            app:layout_constraintStart_toEndOf="@+id/searchImageButton3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add_post_icon" />

        <ImageButton
            android:id="@+id/messageImageButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:contentDescription="Messages"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/parameterImageButton3"
            app:layout_constraintStart_toEndOf="@+id/newPostImageButton3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/message_icon" />

        <ImageButton
            android:id="@+id/parameterImageButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="Parameters"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/messageImageButton3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/setting_icon" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:fontFamily="serif"
            android:padding="10dp"
            android:text="@string/email"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullNameTextView" />

        <TextView
            android:id="@+id/birthdateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:fontFamily="serif"
            android:padding="10dp"
            android:text="@string/birthday"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

        <TextView
            android:id="@+id/latestPostTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="serif"
            android:padding="10dp"
            android:text="@string/latestPost"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthdateTextView" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/consultButton"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/userBirthdateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="150dp"
            android:fontFamily="serif"
            android:padding="10dp"
            android:text="@string/birthday"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toEndOf="@+id/birthdateTextView"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

        <TextView
            android:id="@+id/fullNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UserImageBackgroundImageView"
            tools:text="Full Name" />

        <ImageView
            android:id="@+id/latestPostImageView"
            android:layout_width="145dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/latestPostTextView"
            app:layout_constraintTop_toBottomOf="@+id/birthdateTextView"
            app:srcCompat="@drawable/ic_launcher_background" />

        <ImageView
            android:id="@+id/UserImageBackgroundImageView"
            android:layout_width="392dp"
            android:layout_height="198dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPostImageButton3"
            app:srcCompat="@drawable/borderfull01brighter" />

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/UserImageBackgroundImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPostImageButton3"
            app:srcCompat="@drawable/martin_coffee" />

        <Button
            android:id="@+id/consultButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="serif"
            android:textColor="#0C1E81"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/latestPostTextView"
            tools:text="Consult your posts" />

        <TextView
            android:id="@+id/userEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="150dp"
            android:fontFamily="serif"
            android:padding="10dp"
            android:text="@string/email"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toEndOf="@+id/emailTextView"
            app:layout_constraintTop_toBottomOf="@+id/fullNameTextView" />

        <TextView
            android:id="@+id/postDateTextView"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:fontFamily="serif"
            android:text="@string/postDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toEndOf="@+id/consultButton"
            app:layout_constraintTop_toBottomOf="@+id/latestPostImageView" />

        <TextView
            android:id="@+id/postLocationTextView"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:fontFamily="serif"
            android:text="@string/postLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/consultButton"
            app:layout_constraintTop_toBottomOf="@+id/postDateTextView" />

        <EditText
            android:id="@+id/postDateTextDate"
            android:layout_width="129dp"
            android:layout_height="33dp"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:fontFamily="serif"
            android:inputType="date"
            android:text="@string/postDate"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toEndOf="@+id/postDateTextView"
            app:layout_constraintTop_toBottomOf="@+id/latestPostImageView" />

        <TextView
            android:id="@+id/latestPostLocationTextView"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/consultButton"
            app:layout_constraintTop_toBottomOf="@+id/postLocationTextView"
            tools:text="This post was located at..." />

        <ImageView
            android:id="@+id/cornersImageView"
            android:layout_width="392dp"
            android:layout_height="525dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UserImageBackgroundImageView"
            tools:srcCompat="@drawable/Corners01" />

        <Button
            android:id="@+id/goBackButton"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="serif"
            android:textAlignment="textStart"
            android:textColor="#0C1E81"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/consultButton"
            tools:text="Go back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>